# CaPilot

./: .gitignore
Doc/: CaPilot-PRD.md  CaPilot-创意展示页.html  CaPilot_PRD.md  ESP-IDF-Pitfalls.md  ESP-IDF-坑点记录.md  Folder-Naming-Convention.md  Skill-Sync-Guide.md  TRAE-AI创造力大赛-报名帖-CaPilot.doc  TRAE-AI创造力大赛-报名话题帖-CaPilot.md
Firmware/: Demo-Build-Record.md  ESP-IDF-Environment.md  ESP-IDF-Pitfalls.md  README.md
Firmware/Components/capilot_audio/: API.md  README.md  capilot_audio.c  capilot_audio_capture.c  capilot_audio_events.c  capilot_audio_internal.h  capilot_audio_playback.c
Firmware/Components/capilot_bsp/: CMakeLists.txt
Firmware/Components/capilot_imu/: CMakeLists.txt  README.md  capilot_imu_qmi8658.c
Firmware/Components/capilot_usb_headset/: CMakeLists.txt  capilot_usb_headset.c
Firmware/Components/capilot_usb_hid_keyboard/: CMakeLists.txt
Firmware/Components/capilot_usb_hid_mouse/: capilot_usb_hid_mouse.c
Firmware/Components_Demos/audio_demo/: CMakeLists.txt
Firmware/Components_Demos/imu_demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
Firmware/Components_Demos/keyboard_demo/: CMakeLists.txt
Firmware/Components_Demos/keyboard_demo/main/: CMakeLists.txt
Firmware/Components_Demos/record_playback_demo/: CMakeLists.txt  sdkconfig.defaults
Firmware/Components_Demos/touchpad_demo/: CMakeLists.txt  sdkconfig.defaults
Firmware/Components_Demos/usb_headset_demo/: CMakeLists.txt  README.md
Firmware/components/capilot_audio/: CMakeLists.txt  README.md  capilot_audio_capture.c  capilot_audio_playback.c
Firmware/components/capilot_bsp/: API-Reference.md  CMakeLists.txt  README.md  capilot_bsp.c  idf_component.yml
Firmware/components/capilot_bsp/include/: capilot_bsp.h  capilot_bsp_i2c.h
Firmware/components/capilot_imu/: capilot_imu.c  idf_component.yml
Firmware/components/capilot_usb_hid_mouse/: CMakeLists.txt
Firmware/demos/audio_demo/: CMakeLists.txt  ESP-IDF-Environment.md  README.md  sdkconfig.defaults
Firmware/demos/imu_demo/: CMakeLists.txt
Firmware/demos/keyboard_demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
Firmware/demos/record_playback_demo/: CMakeLists.txt
Firmware/demos/touchpad_demo/: CMakeLists.txt  README.md
Firmware/demos/usb_headset_demo/: CMakeLists.txt  sdkconfig.defaults  test_report_usb_headset.md
Hardware/: Housing_pack1.SLDPRT
Hardware/Lceda-Esp32-S3-Practical-Board/: Interface.md
Hardware/Lceda-Esp32-S3-Practical-Board/Examples/: README.md
Hardware/WareShare/ESP32C6-2.8/: .gitignore
Hardware/WareShare/WareShareESP32C6-Practica-Board-3D/: Housing.3mf  Housing.SLDPRT  Housing.STL  Housing_pack1.SLDPRT  WareShare.SLDASM  喇叭盖.SLDPRT  喇叭盖.STL  小按键.SLDPRT  小按键.STL  小按键1.SLDPRT  小按键1.STL  小按键2.SLDPRT  小按键2.STL
Skill/ESP-BUILD-SKILL/: SKILL.md
Skill/ESP-BUILD-SKILL/scripts/: build.ps1  build_clean.cmd  build_clean.ps1  flash.ps1  setup-env.ps1
Skill/ESP-COMPONENT-SKILL/: SKILL.md
Skill/ESP-COMPONENT-SKILL/scripts/: scaffold-component.ps1
Skill/ESP-COMPONENT-SKILL/templates/: ble_hid_checklist.md  bsp_checklist.md  component_header.h  demo_CMakeLists.txt  demo_main.c  demo_main_CMakeLists.txt  main_CMakeLists.txt  (+3 more)
Skill/Esp-Build-Skill/: SKILL.md
Skill/Esp-Component-Skill/: SKILL.md
Skill/Esp-Datasheet-Skill/: SKILL.md  requirements.txt
Skill/Skill-Sync-Scripts/: setup-skill-links.ps1  setup-skill-links.sh
firmware/esp32_s3/_backup_ble_hid_component/: CMakeLists.txt  ble_hidd_demo.c  ble_hidd_demo.h  capilot_hid_keyboard.c
firmware/esp32_s3/_backup_ble_hid_component/include/: capilot_hid_keyboard.h
firmware/esp32_s3/touchpad_demo/main/: CMakeLists.txt  app_ui.c
(+94 files in other folders)
